--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-family: "Poppins", sans-serif;
 }
 body {
   height: 100vh;
@@ -15,6 +16,7 @@ body {
   );
   animation: gradient-animation 5s ease infinite;
   background-size: 180% 180%;
+  position: relative;
 }
 .container {
   display: flex;
@@ -28,7 +30,6 @@ body {
   opacity: 1;
   transition: all 0.5s;
   z-index: 10;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(11, 13, 14);
   font: bold;
   font-size: 40px;
@@ -49,7 +50,6 @@ body {
   color: black;
   font-size: 20px;
   font-weight: bold;
-  font-family: cursive;
   transition: all 0.5s;
   z-index: 10;
 }
@@ -61,6 +61,13 @@ body {
 }
 .yes-btn:hover {
   background-color: rgb(106, 224, 106);
+}
+.rose {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .no-btn:hover {
@@ -76,13 +83,12 @@ body {
   animation: gradient-animation 8s ease infinite;
   text-align: center;
   font-size: 50px;
-  font-family: cursive;
   border-radius: 20px;
   border: 3px solid goldenrod;
   padding: 100px;
   transition: all 1s;
   position: relative;
-  height: 200px;
+  height: 300px;
   width: 400px;
 }
 
@@ -98,6 +104,7 @@ body {
   #yes-window p {
     left: 0;
   }
+
   .btn-container {
     flex-direction: column;
   }
